# Graffux

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  setup_libs.sh  version.properties
.github/workflows/: build.yml  deploy-sftp.yml  merged-build.yml  release-aab.yml  release-apk.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_launcher_monochrome.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
core/common/: build.gradle.kts  consumer-rules.pro
core/common/src/main/: AndroidManifest.xml
core/data/: build.gradle.kts
core/design/: build.gradle.kts
core/design/src/main/res/drawable/: ic_ps_blur.xml  ic_ps_brush.xml  ic_ps_eraser.xml  ic_ps_image.xml  ic_ps_layers.xml  ic_ps_liquify.xml  ic_ps_pencil.xml  ic_ps_text.xml
core/design/src/main/res/values-de/: strings.xml
core/design/src/main/res/values-es/: strings.xml
core/design/src/main/res/values-fr/: strings.xml
core/domain/: build.gradle.kts
core/nativebridge/: LICENSE  build.gradle.kts  proguard-rules.pro
core/nativebridge/src/main/assets/: zerodce.onnx
core/nativebridge/src/main/cpp/: CMakeLists.txt  DistortionHead.cpp  GraffitiJNI.cpp  ImageWarper.cpp  LowLightEnhancer.cpp  MlasStub.cpp  MobileGS.cpp  StereoProcessor.cpp  SuperPointDetector.cpp
core/nativebridge/src/main/cpp/include/: DistortionHead.h  ImageWarper.h  LowLightEnhancer.h  MobileGS.h  NativeUtil.h  StereoProcessor.h  SuperPointDetector.h
docs/: PRIVACY_POLICY.md  index.html
feature/editor/: build.gradle.kts
gradle/: libs.versions.toml
(+213 files in other folders)
